--- a/css/style.css
+++ b/css/style.css
@@ -137,7 +137,7 @@ header {
     margin: 0 auto;
     width: 100%;
     padding-bottom: 30px;
-    display: flex
+    display: flex;
     text-align: center;
 }
 
@@ -184,13 +184,16 @@ footer {
     display: block;
 }
 
+.bottom-header__title,
+.bottom-header__to-top--link {
+    padding: 10px 15px; /* Provide space to better select the link on touch screens */
+}
+
 .bottom-header__title {
     float: left;
     font-weight: bold;
     padding-left: 10px;
     letter-spacing: 1px;
-    font-size: 1.2em;
-    line-height: 1em;
 }
 
 .bottom-header__to-top {
@@ -198,11 +201,6 @@ footer {
     font-weight: 900;
     text-transform: uppercase;
     margin: 10px 0; /* Meets with the nesting <a>'s padding Top/Bottom to stay in line with the .title-footer */
-}
-
-.bottom-header__title,
-.bottom-header__to-top--link {
-    padding: 10px 15px; /* Provide space to better select the link on touch screens */
 }
 
 .footer-nav {
